--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -21,7 +21,8 @@ check_PROGRAMS=mutateTest \
 	gamete_cleaner \
 	GSLrng_test \
 	type_traits_test \
-	recycling_integration
+	recycling_integration \
+	test_sugar_add_mutation
 
 
 TESTS=$(check_PROGRAMS)
@@ -48,6 +49,7 @@ gamete_cleaner_SOURCES=gamete_cleaner.cc
 GSLrng_test_SOURCES=GSLrng_test.cc
 type_traits_test_SOURCES=type_traits_test.cc
 recycling_integration_SOURCES=recycling_integration.cc
+test_sugar_add_mutation_SOURCES=test_sugar_add_mutation.cc
 
 AM_CXXFLAGS=
 
