change_neutral added, along w/unit test

--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -22,7 +22,8 @@ check_PROGRAMS=mutateTest \
 	GSLrng_test \
 	type_traits_test \
 	recycling_integration \
-	test_sugar_add_mutation
+	test_sugar_add_mutation \
+	test_sugar_change_neutral
 
 
 TESTS=$(check_PROGRAMS)
@@ -50,6 +51,7 @@ GSLrng_test_SOURCES=GSLrng_test.cc
 type_traits_test_SOURCES=type_traits_test.cc
 recycling_integration_SOURCES=recycling_integration.cc
 test_sugar_add_mutation_SOURCES=test_sugar_add_mutation.cc
+test_sugar_change_neutral_SOURCES=test_sugar_change_neutral.cc
 
 AM_CXXFLAGS=
 
