--- a/fwdpp/experimental/Makefile.am
+++ b/fwdpp/experimental/Makefile.am
@@ -1,3 +1,3 @@
 pkgincludedir=$(prefix)/include/fwdpp/experimental
 
-pkginclude_HEADERS=sample_diploid.hpp
+pkginclude_HEADERS=sample_diploid.hpp sample_diplod_mloc.hpp
