refactored tests for low-level demographic operations

--- a/testsuite/unit/Makefile.am
+++ b/testsuite/unit/Makefile.am
@@ -5,7 +5,7 @@ check_PROGRAMS=fwdpp_unit_tests
 
 TESTS=$(check_PROGRAMS)
 
-fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc
+fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc
 
 AM_CXXFLAGS=
 
