--- a/testsuite/unit/Makefile.in
+++ b/testsuite/unit/Makefile.in
@@ -87,7 +87,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 @BUNIT_TEST_LIB_PRESENT_TRUE@check_PROGRAMS =  \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	fwdpp_unit_tests$(EXEEXT) \
-@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_unit_tests$(EXEEXT)
+@BUNIT_TEST_LIB_PRESENT_TRUE@	extensions_unit_tests$(EXEEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_unit_tests$(EXEEXT)
 @BUNIT_TEST_LIB_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
 subdir = testsuite/unit
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -122,6 +123,20 @@ am__fwdpp_unit_tests_SOURCES_DIST = fwdpp_unit_tests.cc mutateTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	siteDepFitnessTest.$(OBJEXT)
 fwdpp_unit_tests_OBJECTS = $(am_fwdpp_unit_tests_OBJECTS)
 fwdpp_unit_tests_LDADD = $(LDADD)
+am__sugar_unit_tests_SOURCES_DIST = sugar_GSLrngTest.cc \
+	sugar_metapop_custom_diploidTest.cc sugar_metapopTest.cc \
+	sugar_multilocusTest.cc sugar_samplingTest.cc \
+	sugar_singlepop_custom_diploidTest.cc sugar_singlepopTest.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@am_sugar_unit_tests_OBJECTS =  \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapop_custom_diploidTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapopTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_multilocusTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepop_custom_diploidTest.$(OBJEXT) \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepopTest.$(OBJEXT)
+sugar_unit_tests_OBJECTS = $(am_sugar_unit_tests_OBJECTS)
+sugar_unit_tests_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -151,9 +166,11 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(extensions_unit_tests_SOURCES) $(fwdpp_unit_tests_SOURCES)
+SOURCES = $(extensions_unit_tests_SOURCES) $(fwdpp_unit_tests_SOURCES) \
+	$(sugar_unit_tests_SOURCES)
 DIST_SOURCES = $(am__extensions_unit_tests_SOURCES_DIST) \
-	$(am__fwdpp_unit_tests_SOURCES_DIST)
+	$(am__fwdpp_unit_tests_SOURCES_DIST) \
+	$(am__sugar_unit_tests_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -481,6 +498,14 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@TESTS = $(check_PROGRAMS)
 @BUNIT_TEST_LIB_PRESENT_TRUE@fwdpp_unit_tests_SOURCES = fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@extensions_unit_tests_SOURCES = extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
+@BUNIT_TEST_LIB_PRESENT_TRUE@sugar_unit_tests_SOURCES = sugar_GSLrngTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapop_custom_diploidTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapopTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_multilocusTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_samplingTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepop_custom_diploidTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_singlepopTest.cc
+
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_LIB_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -528,6 +553,10 @@ fwdpp_unit_tests$(EXEEXT): $(fwdpp_unit_tests_OBJECTS) $(fwdpp_unit_tests_DEPEND
 	@rm -f fwdpp_unit_tests$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(fwdpp_unit_tests_OBJECTS) $(fwdpp_unit_tests_LDADD) $(LIBS)
 
+sugar_unit_tests$(EXEEXT): $(sugar_unit_tests_OBJECTS) $(sugar_unit_tests_DEPENDENCIES) $(EXTRA_sugar_unit_tests_DEPENDENCIES) 
+	@rm -f sugar_unit_tests$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(sugar_unit_tests_OBJECTS) $(sugar_unit_tests_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -543,6 +572,13 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mutateTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recombinationTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/siteDepFitnessTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_GSLrngTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_metapopTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_metapop_custom_diploidTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_multilocusTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_samplingTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepopTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type_traitsTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utilTest.Po@am__quote@
 
@@ -763,6 +799,13 @@ fwdpp_unit_tests.log: fwdpp_unit_tests$(EXEEXT)
 extensions_unit_tests.log: extensions_unit_tests$(EXEEXT)
 	@p='extensions_unit_tests$(EXEEXT)'; \
 	b='extensions_unit_tests'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
+sugar_unit_tests.log: sugar_unit_tests$(EXEEXT)
+	@p='sugar_unit_tests$(EXEEXT)'; \
+	b='sugar_unit_tests'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
