sugar tests work, but need further separation of unit from integration tests

--- a/testsuite/unit/Makefile.am
+++ b/testsuite/unit/Makefile.am
@@ -7,7 +7,8 @@ TESTS=$(check_PROGRAMS)
 
 fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
 extensions_unit_tests_SOURCES=extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
-sugar_unit_tests_SOURCES=sugar_GSLrngTest.cc \
+sugar_unit_tests_SOURCES=sugar_unit_tests.cc \
+	sugar_GSLrngTest.cc \
 	sugar_metapop_custom_diploidTest.cc \
 	sugar_metapopTest.cc \
 	sugar_multilocusTest.cc \
