--- a/testsuite/unit/Makefile.in
+++ b/testsuite/unit/Makefile.in
@@ -123,11 +123,13 @@ am__fwdpp_unit_tests_SOURCES_DIST = fwdpp_unit_tests.cc mutateTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	siteDepFitnessTest.$(OBJEXT)
 fwdpp_unit_tests_OBJECTS = $(am_fwdpp_unit_tests_OBJECTS)
 fwdpp_unit_tests_LDADD = $(LDADD)
-am__sugar_unit_tests_SOURCES_DIST = sugar_GSLrngTest.cc \
-	sugar_metapop_custom_diploidTest.cc sugar_metapopTest.cc \
-	sugar_multilocusTest.cc sugar_samplingTest.cc \
-	sugar_singlepop_custom_diploidTest.cc sugar_singlepopTest.cc
+am__sugar_unit_tests_SOURCES_DIST = sugar_unit_tests.cc \
+	sugar_GSLrngTest.cc sugar_metapop_custom_diploidTest.cc \
+	sugar_metapopTest.cc sugar_multilocusTest.cc \
+	sugar_samplingTest.cc sugar_singlepop_custom_diploidTest.cc \
+	sugar_singlepopTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@am_sugar_unit_tests_OBJECTS =  \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_unit_tests.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapop_custom_diploidTest.$(OBJEXT) \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapopTest.$(OBJEXT) \
@@ -498,7 +500,8 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_LIB_PRESENT_TRUE@TESTS = $(check_PROGRAMS)
 @BUNIT_TEST_LIB_PRESENT_TRUE@fwdpp_unit_tests_SOURCES = fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTest.cc type_traitsTest.cc recombinationTest.cc demographyTest.cc siteDepFitnessTest.cc
 @BUNIT_TEST_LIB_PRESENT_TRUE@extensions_unit_tests_SOURCES = extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
-@BUNIT_TEST_LIB_PRESENT_TRUE@sugar_unit_tests_SOURCES = sugar_GSLrngTest.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@sugar_unit_tests_SOURCES = sugar_unit_tests.cc \
+@BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_GSLrngTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapop_custom_diploidTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_metapopTest.cc \
 @BUNIT_TEST_LIB_PRESENT_TRUE@	sugar_multilocusTest.cc \
@@ -579,6 +582,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_samplingTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepopTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar_unit_tests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/type_traitsTest.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utilTest.Po@am__quote@
 
