--- a/testsuite/unit/Makefile.am
+++ b/testsuite/unit/Makefile.am
@@ -9,12 +9,13 @@ fwdpp_unit_tests_SOURCES=fwdpp_unit_tests.cc mutateTest.cc gameteTest.cc utilTes
 extensions_unit_tests_SOURCES=extensions_unit_test.cc extensions_regionsTest.cc extensions_callbacksTest.cc
 sugar_unit_tests_SOURCES=sugar_unit_tests.cc \
 	sugar_GSLrngTest.cc \
-	sugar_metapop_custom_diploidTest.cc \
-	sugar_metapopTest.cc \
-	sugar_multilocusTest.cc \
-	sugar_samplingTest.cc \
+	sugar_singlepopTest.cc \
 	sugar_singlepop_custom_diploidTest.cc \
-	sugar_singlepopTest.cc
+	sugar_metapopTest.cc \
+	sugar_metapop_custom_diploidTest.cc \
+	sugar_multilocusTest.cc \
+	sugar_samplingTest.cc
+
 
 AM_CXXFLAGS=
 
